# cloggo

./: Cargo.toml  justfile  readme.md
.cargo/: config.toml
src/: ds.rs  linreg.rs  main.rs
