[package]
name = "cloggo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cloggo"
path = "src/main.rs"


[dependencies]


embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-sync = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.3.3", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-net-wiznet = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = { version = "1.23.1", features = ["serde"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
heapless = { version = "0.8", features = ["serde"] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
picoserve = "0.2.2"
log = "0.4.20"
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
minicbor = { version = "0.20.0" }

[profile.release]
debug = 2
